[workspace]
members = [
  "jormungandr-lib",
  "jormungandr-watchdog",
  "jormungandr-watchdog-derive",
  "jormungandr",
  "jcli",
  "testing/jormungandr-testing-utils",
  "testing/jormungandr-integration-tests",
  "testing/jormungandr-scenario-tests",
  "testing/jormungandr-cucumber-tests"
]

exclude = [
  "chain-deps",
]
