[package]
name = "jormungandr-cucumber-tests"
version = "0.1.0"
authors = ["danielsanchezq <daniel.sanchez@iohk.io>"]
edition = "2018"


[[test]]
name = "test_scenario"
harness = false # Allows Cucumber to print output instead of libtest

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand_chacha = "0.2"

[dev-dependencies]
jormungandr-scenario-tests = { path = "../jormungandr-scenario-tests" }
jormungandr-integration-tests = { path = "../jormungandr-integration-tests" }
jormungandr-testing-utils = { path = "../jormungandr-testing-utils" }
chain-impl-mockchain = { path = "../../chain-deps/chain-impl-mockchain"}
cucumber = { package = "cucumber_rust", version = "^0.6.0" }
